# spine-runtimes

./: .gitattributes  .gitignore  CHANGELOG.md  Package.swift  README.md  flags.cmake  generate-all-bindings.sh  generate-bindings.sh
.github/: pull_request_template.md
docs/: project-description.md  todo.md
formatters/: .clang-format  .editorconfig  .gitignore  .swift-format  README.md  format-cpp.sh  format-csharp.sh  format-dart.sh  format-haxe.sh  format-java.sh  format-ts.sh  (+3 more)
spine-c/: CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build.sh  docs-new.md
spine-c-new/: CMakeLists.txt
spine-c-new/codegen/: exclusions.txt  package-lock.json  rtti-bases.txt
spine-c-new/codegen/src/: array-scanner.ts  c-types.ts  c-writer.ts  exclusions.ts  file-writer.ts  find-array-types.ts  index.ts  ir-generator.ts  rtti.ts  type-extractor.ts  types.ts  validate-coverage.ts
spine-c-new/codegen/src/generators/: array-generator.ts  constructor-generator.ts  enum-generator.ts  method-generator.ts  opaque-type-generator.ts  rtti-generator.ts
spine-c-new/include/: spine-c.h
spine-c-new/src/: base.h  custom.cpp  custom.h  extensions.cpp  extensions.h
spine-c-new/test/: test.c
spine-c/codegen/: README.md  exclusions.txt  last-nullable.md  package-lock.json  package.json  spine-cpp-types.json  tsconfig.json
spine-c/codegen/src/: array-scanner.ts  c-types.ts  c-writer.ts  checks.ts  exclusions.ts  index.ts  ir-generator.ts  null-analysis.ts  type-extractor.ts  types.ts  warnings.ts
spine-c/include/: module.modulemap  spine-c.h
spine-c/spine-c-unit-tests/tests/: MemoryTestFixture.h
spine-c/spine-c/src/spine/: AnimationState.c  Debug.c  IkConstraint.c  Json.c  SkeletonBinary.c  SkeletonJson.c
spine-c/src/: base.h  extensions.cpp  extensions.h
spine-c/test/: test.c
spine-c/tests/: debug-printer.c  headless-test.c
spine-c/tests/rust-wasm/: Cargo.toml  README.md  build.rs  test.sh
spine-c/tests/rust-wasm/src/: lib.rs
spine-cpp/: CMakeLists.txt  README.md  build.sh  extract-spine-cpp-types.js  test-nostdlib.sh
spine-cpp/include/spine/: Animation.h  AnimationState.h  AnimationStateData.h  Array.h  ArrayUtils.h  Atlas.h  AtlasAttachmentLoader.h  Attachment.h  AttachmentLoader.h  AttachmentTimeline.h  BlockAllocator.h  Bone.h  BoneData.h  BoneLocal.h  BonePose.h  BoneTimeline.h  BoundingBoxAttachment.h  ClippingAttachment.h  Color.h  ColorTimeline.h  Constraint.h  ConstraintData.h  ConstraintTimeline.h  ConstraintTimeline1.h  CurveTimeline.h  Debug.h  DeformTimeline.h  DrawOrderTimeline.h  Event.h  EventData.h  EventTimeline.h  Extension.h  HasRendererObject.h  HashMap.h  IkConstraint.h  IkConstraintData.h  IkConstraintPose.h  IkConstraintTimeline.h  Inherit.h  InheritTimeline.h  (+64 more)
spine-cpp/spine-cpp-lite/: spine-cpp-lite.cpp  spine-cpp-lite.h
spine-cpp/spine-cpp/include/spine/: Animation.h  AnimationState.h  Array.h  ArrayUtils.h  Atlas.h  AtlasAttachmentLoader.h  Attachment.h  AttachmentLoader.h  AttachmentTimeline.h  AttachmentType.h  BlendMode.h  BlockAllocator.h  Bone.h  BoneData.h  BoneLocal.h  BonePose.h  BoneTimeline.h  BoundingBoxAttachment.h  Color.h  ColorTimeline.h  Constraint.h  ConstraintData.h  ConstraintTimeline.h  ConstraintTimeline1.h  CurveTimeline.h  Debug.h  DeformTimeline.h  DrawOrderTimeline.h  EventTimeline.h  FromProperty.h  FromRotate.h  FromScaleX.h  FromScaleY.h  FromShearY.h  FromX.h  FromY.h  HashMap.h  IkConstraint.h  IkConstraintData.h  IkConstraintPose.h  (+70 more)
spine-cpp/spine-cpp/src/spine/: Animation.cpp  AnimationState.cpp  Atlas.cpp  AtlasAttachmentLoader.cpp  AttachmentTimeline.cpp  Bone.cpp  BoneData.cpp  BoneLocal.cpp  BonePose.cpp  BoneTimeline.cpp  ColorTimeline.cpp  Constraint.cpp  ConstraintData.cpp  ConstraintTimeline.cpp  ConstraintTimeline1.cpp  CurveTimeline.cpp  DeformTimeline.cpp  DrawOrderTimeline.cpp  Event.cpp  EventData.cpp  EventTimeline.cpp  Extension.cpp  FromProperty.cpp  FromRotate.cpp  FromScaleX.cpp  FromScaleY.cpp  FromShearY.cpp  FromX.cpp  FromY.cpp  IkConstraint.cpp  IkConstraintData.cpp  IkConstraintPose.cpp  IkConstraintTimeline.cpp  InheritTimeline.cpp  Json.cpp  LinkedMesh.cpp  Log.cpp  MeshAttachment.cpp  PathAttachment.cpp  PathConstraint.cpp  (+51 more)
spine-cpp/src/: no-cpprt.cpp  nostdcpp.cpp  nostdlib.cpp
spine-cpp/src/spine/: Animation.cpp  AnimationState.cpp  AnimationStateData.cpp  Atlas.cpp  AtlasAttachmentLoader.cpp  AttachmentTimeline.cpp  Bone.cpp  BoneData.cpp  BonePose.cpp  BoneTimeline.cpp  BoundingBoxAttachment.cpp  ClippingAttachment.cpp  ColorTimeline.cpp  ConstraintTimeline.cpp  ConstraintTimeline1.cpp  CurveTimeline.cpp  DeformTimeline.cpp  DrawOrderTimeline.cpp  Event.cpp  EventData.cpp  EventTimeline.cpp  Extension.cpp  IkConstraint.cpp  IkConstraintData.cpp  IkConstraintTimeline.cpp  InheritTimeline.cpp  Json.cpp  LinkedMesh.cpp  MathUtil.cpp  MeshAttachment.cpp  PathAttachment.cpp  PathConstraint.cpp  PathConstraintData.cpp  PathConstraintMixTimeline.cpp  PathConstraintPositionTimeline.cpp  PathConstraintSpacingTimeline.cpp  PhysicsConstraint.cpp  PhysicsConstraintData.cpp  PhysicsConstraintPose.cpp  PhysicsConstraintTimeline.cpp  (+31 more)
spine-cpp/tests/: CMakeLists.txt  DebugPrinter.cpp  HeadlessTest.cpp  JsonWriter.h  SkeletonSerializer.h  test.sh
spine-cpp/tests/src/: DebugPrinter.cpp
spine-flutter/src/: CMakeLists.txt
spine-glfw/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  docs-new.md  docs.md
spine-glfw/example/: ik-following.cpp  main-c.cpp  main-cpp-lite.cpp  main.cpp  physics.cpp
spine-glfw/src/: spine-glfw.cpp  spine-glfw.h  stb_image.h
spine-sfml/: CMakeLists.txt  CMakePresets.json  README.md  build.sh
spine-sfml/c/: README.md
spine-sfml/c/data/: coin-pma.atlas  owl-pma.atlas
spine-sfml/c/example/: main.cpp
spine-sfml/c/src/spine/: spine-sfml.cpp  spine-sfml.h
spine-sfml/cpp/: README.md
spine-sfml/cpp/data/: coin-pro.json  owl-pro.json  stretchyman-pma.atlas
spine-sfml/cpp/example/: main.cpp  testbed.cpp
spine-sfml/cpp/src/spine/: spine-sfml.cpp  spine-sfml.h
spine-sfml/example/: main.cpp
spine-sfml/src/: spine-sfml.cpp  spine-sfml.h
(+1286 files in other folders)
